--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasan Web-Developer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="header-section">
+        <div class="header-info">
             <h1>Welcome To</h1>
-            <h1>Hasan's Website</h1>
+            <h1> <span class="name-highlight">Hasan's </span> Website</h1>
             <h3>Professional Web Developer</h3>
-            <p>Hey!This is Hasan Rana.Iam a Front-End Developer.I loved to Coding and i am experienced at html, css, Javascrip, React Js,Mongodb etc.I can help you to design your site completly .I sincerely develop your site.</p>
+            <p>Hey!This is Hasan Rana.Iam a Front-End Developer.I loved to Coding and i am experienced at html, css, Javascrip, React Js,Mongodb etc.I can help you to design your site completly .I sincerely develop your site.I learned web-development with programming hero team.</p>
+            <a href="#" class="link-button">HIRE ME</a>
         </div>
 
-        <div>
-            <img src="" alt="">
+        <div class="header-info">
+            <img src="images/jhankar.png" alt="jhankar mahabub">
         </div>
+        
     </section>
     
 </body>
