--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- header section -->
     <section class="header-section">
         <div class="header-info">
             <h1>Welcome To</h1>
@@ -22,6 +23,23 @@
         </div>
         
     </section>
+<!-- header section -->
+
+
+<!-- about section -->
+    <section class="about-section">
+        <div class="about-info">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="about-info-right">
+            <h2 class="about-info-title">Dream Big</h2>
+            <h4>Become a Web-Developer</h4>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" href="#">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
+<!-- about section -->
     
 </body>
 </html>
