added a about section

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 <!-- header section -->
-    <section class="header-section">
-        <div class="header-info">
+    <section class="header-banner">
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="name-highlight">Hasan's </span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>Hey!This is Hasan Rana.Iam a Front-End Developer.I loved to Coding and i am experienced at html, css, Javascrip, React Js,Mongodb etc.I can help you to design your site completly .I sincerely develop your site.I learned web-development with programming hero team.</p>
-            <a href="#" class="link-button">HIRE ME</a>
+            <a href="https://www.facebook.com/profile.php?id=100010086906679" target="_blank" class="link-button">HIRE ME</a>
         </div>
 
-        <div class="header-info">
+        <div class="half-width">
             <img src="images/jhankar.png" alt="jhankar mahabub">
         </div>
         
@@ -27,15 +27,15 @@
 
 
 <!-- about section -->
-    <section class="about-section">
-        <div class="about-info">
+    <section class="dream-area">
+        <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
-        <div class="about-info-right">
+        <div class="half-width">
             <h2 class="about-info-title">Dream Big</h2>
-            <h4>Become a Web-Developer</h4>
+            <h3>Become a Web-Developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" href="#">DOWNLOAD RESUME</a>
+            <a class="link-button" href="https://www.facebook.com/profile.php?id=100010086906679" target="_blank">DOWNLOAD RESUME</a>
         </div>
 
     </section>
