finished the site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="header-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="name-highlight">Hasan's </span> Website</h1>
+            <h1> <span class="orange-highlight">Hasan's </span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>Hey!This is Hasan Rana.Iam a Front-End Developer.I loved to Coding and i am experienced at html, css, Javascrip, React Js,Mongodb etc.I can help you to design your site completly .I sincerely develop your site.I learned web-development with programming hero team.</p>
             <a href="https://www.facebook.com/profile.php?id=100010086906679" target="_blank" class="link-button">HIRE ME</a>
@@ -40,6 +40,25 @@
 
     </section>
 <!-- about section -->
+
+<section class="experiences-area">
+    <h2>Experiences</h2>
+    <div class="half-width" id="full-stack">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-highlight">2021-Present | Pro Level Web Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+
+    <div class="half-width" id="baby">
+        <h2>Baby Web Developer</h2>
+        <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+    </div>
+
+</section>
+<footer>
+    <p>&copy Copyright 2021 <span class="footer-hover"> Hasan Rana </span>, All Right Reserved</p>
+</footer>
     
 </body>
 </html>
