--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         </div>
 
         <div class="half-width">
-            <img src="images/jhankar.png" alt="jhankar mahabub">
+            <img src="images/image-11.png" alt="hasan rana">
         </div>
         
     </section>
 <!-- header section -->
 
 
-<!-- about section -->
+<!-- dream  section -->
     <section class="dream-area">
-        <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+        <div class="half-width profile-2">
+            <img src="images/my-bgimage2.png" alt="hasan 2">
         </div>
         <div class="half-width">
             <h2 class="about-info-title">Dream Big</h2>
@@ -39,7 +39,7 @@
         </div>
 
     </section>
-<!-- about section -->
+<!-- dream section -->
 
 <section class="experiences-area">
     <h2>Experiences</h2>
